# EthoGraph

./: .gitignore  CLAUDE.md  README.md  Test.ipynb  Windows install.bat  _test_help.html  environment-dev.yml  environment.yml  gui.py  gui_settings.yaml  mkdocs.yml  pyproject.toml  requirements.txt  setup.bat  test3.ipynb  tmpclaude-c427-cwd  tmpclaude-ebb8-cwd
configs/: Freddy_train_20251021_164220.json  changepoint_settings.yaml  gui_settings.yaml  mapping.txt  mapping_temporary.txt  philod.yaml  style.mplstyle
configs/model/: Ivy_CV_20260130_173800.json  Ivy_inference_20260130_103037.json  Ivy_inference_20260203_092442.json  Ivy_inference_20260204_141527.json  Ivy_train_20260129_182315_epoch-100.model  Ivy_train_20260202_191138.json  Ivy_train_20260203_153754.json
configs/style/: style.mplstyle
configs/temporary/: Freddy_trainAll.json  Freddy_train_20250927.json  Freddy_train_20251003.json
docs/: 04. Plot settings.md  05. Troubleshooting.md  changepoints.md  index.md  installation.md  labelling.md  loading-data.md  plot-settings.md  shortcuts.md  troubleshooting.md
docs/media/: changepoints.ipynb
ethograph/: __init__.py  cli.py  shortcuts.py
ethograph/assets/: menu.json
ethograph/features/: audio_changepoints.py  audio_features.py  changepoints.py  energy.py  energy_features.py  filter.py  mov_features.py  move_features.py  movement.py  periodicity.py  preprocessing.py
ethograph/gui/: app_constants.py  app_state.py  data_loader.py  dialog_busy_progress.py  dialog_create_nc.py  dialog_function_params.py  dialog_select_template.py  label_drawing_mixin.py  multipanel_container.py  parameters.py  phy_bridge.py  plot_container.py  plots_audiotrace.py  plots_base.py  plots_ephystrace.py  plots_heatmap.py  plots_lineplot.py  plots_overlay.py  plots_space.py  plots_spectrogram.py  shortcuts_dialog.py  spectrogram_sources.py  video_sync.py  widget_ephys.py  widgets_changepoints.py  widgets_data.py  widgets_documentation.py  widgets_energy.py  widgets_io.py  widgets_labels.py  widgets_meta.py  widgets_navigation.py  widgets_plot.py  widgets_plot_settings.py  widgets_spectrogram.py  widgets_transform.py
ethograph/model/: batch_gen.py  cetnet_encoder.py  dataset.py  (+3 more)
extras/: phy_ethograph_bridge.py
logging/: s3d_logs.txt
moveseg/: __init__.py  cli.py  shortcuts.py
scripts/: GP2025_tutorial.ipynb  MOV_testing.ipynb  debug_gui.py  debug_launch_copy_paste.json  find_best_s3d.ipynb  migrate_dense_to_intervals.py  model_config.py  model_run.py  open_gui.bat  open_gui.py  pull_force.bat  s3d_features.py
tests/: conftest.py  test_data_loading.py  test_gui_integration.py  test_label_intervals.py  test_no_video_mode.py
tutorials/: convert_dataset_barrel.ipynb  convert_dataset_birdpark.ipynb  convert_dataset_cricket.ipynb  convert_dataset_pair24.ipynb  convert_datset_lockbox.ipynb  create_dataset_Moll25.ipynb  pupil_dataset.ipynb
(+114 files in other folders)
